@@ -1,3 +1,7 @@
+2008-10-12  Ales Hakl  <ales at hakl dot net>
+
+	* src/dfsch.c (make_symbol): copy symbol name
+
 2008-10-07  Ales Hakl  <ales at hakl dot net>
 
 	* src/dfsch.c (dfsch_set_frame_context): fill in context fields in
